--- a/History of spaced repetition/05.1988 Two component of memory.md
+++ b/History of spaced repetition/05.1988 Two component of memory.md
@@ -2,6 +2,8 @@
 
 # 1988：记忆的两个组成成分
 
+[TOC=2,5]
+
 [Two-component model of long-term memory](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory) lays at the foundation of [SuperMemo](https://supermemo.guru/wiki/SuperMemo), and is expressed explicitly in [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17). It differentiates between how [stable](https://supermemo.guru/wiki/Stability) knowledge is in long term memory storage, and how [easy it is to retrieve](https://supermemo.guru/wiki/Retrievability). This remains a little known and quintessential fact of the theory of learning that one can be fluent and still remember poorly.
 
 [长期记忆的双组分模型](https://supermemo.guru/wiki/Two-component_model_of_long-term_memory)是 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 的基础，并在 [SM-17 算法](https://supermemo.guru/wiki/Algorithm_SM-17)中明确表示。它区分了知识在长期记忆存储中的稳定性和提取的难易程度。这仍然是学习理论中一个鲜为人知的典型事实，即一个人可以流利，但记忆力仍然很差。
