--- a/History of spaced repetition/14.2014 Algorithm SM-17.md
+++ b/History of spaced repetition/14.2014 Algorithm SM-17.md
@@ -1,5 +1,7 @@
 # 2014: Algorithm SM-17
 
+[TOC=2,5]
+
 # 2014算法 SM-17
 
 The newest [SuperMemo](https://supermemo.guru/wiki/SuperMemo) algorithm in its design can be used to summarize its own phylogeny. It can also be used to write the counterfactual history of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition). If there were no dinosaurs, humans might not have emerged or might look differently. However, the entire dino branch of the evolutionary tree could easily be chopped off, and still keep humans safe on their own mammalian branch.
