--- a/Essays/义务教育必须结束.md
+++ b/Essays/义务教育必须结束.md
@@ -1,6 +1,6 @@
 # Compulsory schooling must end
 
-# 强制教育必须结束
+# 义务教育必须结束
 
 ## Violation of human rights
 
@@ -8,7 +8,7 @@
 
 [Compulsory schooling is a blatant violation of human rights](https://supermemo.guru/wiki/Children’s_Freedom:_A_Human_Rights_Perspective)
 
-强制教育是对人权的公然侵犯
+义务教育是对人权的公然侵犯
 
 In the industrialized world, we lock most of the children for a decade in a system that is supposed to educate intellectual elites. Instead, we do irreversible harm to mental health, lifelong education, and creative potential of societies.
 
@@ -16,7 +16,7 @@ In the industrialized world, we lock most of the children for a decade in a syst
 
 [Compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling) will go the way of slavery. It will be remembered as a monumental waste of human resources that lasted well beyond a century. It will be a monument to human ignorance in the area of combating ignorance.
 
-强制教育将走上奴隶制的道路。它将作为持续了一个多世纪的巨大人力资源浪费而被铭记。它将成为人类在与无知作斗争方面无知的一座丰碑。
+义务教育将走上奴隶制的道路。它将作为持续了一个多世纪的巨大人力资源浪费而被铭记。它将成为人类在与无知作斗争方面无知的一座丰碑。
 
 When committing human right violations, we often use "intellectual inferiority" argument as an excuse. Slaves were not smart enough to live their own autonomous lives. Citizens were too greedy to be entrepreneurs. Immigrants were too ignorant to teach their own children. Women were too dumb to vote. Today, we say that children are not smart enough to self-educate.
 
@@ -24,7 +24,7 @@ When committing human right violations, we often use "intellectual inferiority" 
 
 I discuss the harms of schooling in [this book](https://supermemo.guru/wiki/Problem_of_schooling). Here I would like to discuss a few positive outcomes that will come with the end to [compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling). I would like to collect feedback and ideas on how societies will change when we replace the concept of **mandatory schooling** with the concept of the **right to rich education**.
 
-我在这本书中讨论了学校教育的危害。在这里，我想讨论一些随着强制教育的结束而产生的积极成果。我想收集一些反馈意见和想法，说明当我们用享有**丰富教育的权利**的概念取代**强制教育**的概念时，社会将如何改变。
+我在这本书中讨论了学校教育的危害。在这里，我想讨论一些随着义务教育的结束而产生的积极成果。我想收集一些反馈意见和想法，说明当我们用享有**丰富教育的权利**的概念取代**义务教育**的概念时，社会将如何改变。
 
 ## Cultural paradigm shift
 
@@ -32,7 +32,7 @@ I discuss the harms of schooling in [this book](https://supermemo.guru/wiki/Prob
 
 [Ivan Illich](https://supermemo.guru/wiki/Ivan_Illich) noticed half-a-century ago, that schooling became so culturally ingrained in modern societies that we no longer imagine life without [coercion in learning](https://supermemo.guru/wiki/Coercion_in_learning). When I ask around about the effects of the end to [compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling), I invariably get the only culturally ingrained and appropriate answer: *"We will end up with illiterate society"*. The experience of [democratic schools](https://supermemo.guru/wiki/Democratic_school) and [unschoolers](https://supermemo.guru/wiki/Unschooling) has provided rich and easy-to-understand evidence that the opposite would be the case. Neuroscience may not be that obvious, but is even more adamant. Human brain is an [optimum device that makes us adapt to the environment](https://supermemo.guru/wiki/Optimality_of_the_learn_drive). Modern environments are rich in knowledge and provide rich learning options. [Compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling) systematically destroys that natural adaptability. As a result, in the quest to combat ignorance, we increasingly do the opposite: we foster injured minds with crippled adaptation skills and vestigial immunity to the environmental change.
 
-伊万 · 伊里奇在半个世纪前就注意到，学校教育在现代社会中已经成为根深蒂固的文化，以至于我们不再想象没有强迫学习的生活。当我问及结束强制教育的影响时，我总是得到唯一一个根深蒂固的、适当的答案: “我们最终会变成文盲社会”。民主学校和非学校教育的经验提供了大量易于理解的证据，表明情况恰恰相反。神经科学可能不是那么明显，但是更加坚定。人脑是使我们适应环境的最佳设备。现代环境知识丰富，提供了丰富的学习选择。强制教育系统地破坏了这种自然的适应性。因此，在与无知作斗争的过程中，我们越来越多地采取相反的做法: 我们用残缺的适应技能和对环境变化的退化免疫力来培养受伤的心灵。
+伊万 · 伊里奇在半个世纪前就注意到，学校教育在现代社会中已经成为根深蒂固的文化，以至于我们不再想象没有强迫学习的生活。当我问及结束义务教育的影响时，我总是得到唯一一个根深蒂固的、适当的答案: “我们最终会变成文盲社会”。民主学校和非学校教育的经验提供了大量易于理解的证据，表明情况恰恰相反。神经科学可能不是那么明显，但是更加坚定。人脑是使我们适应环境的最佳设备。现代环境知识丰富，提供了丰富的学习选择。义务教育系统地破坏了这种自然的适应性。因此，在与无知作斗争的过程中，我们越来越多地采取相反的做法: 我们用残缺的适应技能和对环境变化的退化免疫力来培养受伤的心灵。
 
 ## Happier world with less coercion
 
@@ -70,7 +70,7 @@ Here are some good effects of abolishing mandatory schooling:
 24. [knowledge diversification](https://supermemo.guru/wiki/Diversification) in society will increase (see: [4 Things That Would Happen if We Eliminated Compulsory Schooling Laws](https://supermemo.guru/wiki/Positive_social_change_that_will_come_with_the_end_of_compulsory_schooling))
 25. [free learning](https://supermemo.guru/wiki/Free_learning) will flourish unabated
 
-以下是取消强制教育的一些好的效果：
+以下是取消义务教育的一些好的效果：
 
 1. 孩子们(以及以后的成年人)将不再讨厌学习；
 2. 孩子们会跳过课程，而不是困倦地去上学。
@@ -95,12 +95,12 @@ Here are some good effects of abolishing mandatory schooling:
 21. 有了早期就业的选择，孩子们可以按照自己的意愿做出贡献、融入社会、成长和成熟
 22. 学生在学校不会被那些真正不想去的人分心
 23. 在文化上，家庭在儿童生活中的核心作用将有机会得到恢复
-24. 社会的知识多样性将增加（见：如果我们取消强制教育法会发生的4件事）
+24. 社会的知识多样性将增加（见：如果我们取消义务教育法会发生的4件事）
 25. 自由学习将继续蓬勃发展
 
 Without [coercion](https://supermemo.guru/wiki/Coercion_in_learning), learning would be a [pleasure](https://supermemo.guru/wiki/Pleasure_of_learning), bad schools and bad teachers would disappear overnight, kids would be healthier and smile more, literacy would thrive, we would all gain on brain health and intelligence, societies would be more productive, and the world would be a happier place
 
-如果没有强制，学习就会成为一种乐趣，坏学校和坏老师就会一夜之间消失，孩子们就会更健康，笑得更灿烂，识字就会更茁壮，我们都会在大脑健康和智慧上有所收获，社会就会更有生产力，世界就会更幸福。
+如果没有义务，学习就会成为一种乐趣，坏学校和坏老师就会一夜之间消失，孩子们就会更健康，笑得更灿烂，识字就会更茁壮，我们都会在大脑健康和智慧上有所收获，社会就会更有生产力，世界就会更幸福。
 
 ## The myth of illiterate society
 
@@ -108,15 +108,15 @@ Without [coercion](https://supermemo.guru/wiki/Coercion_in_learning), learning w
 
 The specter of "illiterate society" is just a myth. The same individuals who fear illiterate population, insist that their own lives would change little with the end to [compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling). Parents would change little. Teacher would feel free to educate and innovate (instead of rushing through the [curriculum](https://supermemo.guru/wiki/Curriculum)). Only children see more options: many would skip a subject or two, and many would relish the option of getting some healthy sleep in the night. The most symptomatic is a frequent answer I get from kids: *"The world would be beautiful"*.
 
-“文盲社会”的幽灵只是一个迷思。同样是这些害怕文盲人口的人，坚持认为随着强制教育的结束，他们自己的生活不会有什么改变。父母不会改变什么。教师可以自由地进行教育和创新(而不是匆匆忙忙地完成课程)。独生子女看到了更多的选择：许多人会跳过一两个主题，而且许多人喜欢在晚上获得一些健康睡眠的选择。最常见的症状是我从孩子们那里得到的回答：“世界会很美好”。
+“文盲社会”的幽灵只是一个迷思。同样是这些害怕文盲人口的人，坚持认为随着义务教育的结束，他们自己的生活不会有什么改变。父母不会改变什么。教师可以自由地进行教育和创新(而不是匆匆忙忙地完成课程)。独生子女看到了更多的选择：许多人会跳过一两个主题，而且许多人喜欢在晚上获得一些健康睡眠的选择。最常见的症状是我从孩子们那里得到的回答：“世界会很美好”。
 
 I struggle to compile the list of things that would change for the worse. My main problem is that people tell me what others, *"the less capable"* or *"the less educated"* individuals would do (see: [Advantages of compulsory education](https://supermemo.guru/wiki/Advantages_of_compulsory_education)). They can hardly ever point to the advantages of limiting their own freedom.
 
-我绞尽脑汁地想列出那些会变得更糟糕的事情。我的主要问题是，人们告诉我其他人，“能力较差”或“受教育程度较低”的人会怎么做(见: 强制教育的优势)。他们几乎不能指出限制自己自由的好处。
+我绞尽脑汁地想列出那些会变得更糟糕的事情。我的主要问题是，人们告诉我其他人，“能力较差”或“受教育程度较低”的人会怎么做(见: 义务教育的优势)。他们几乎不能指出限制自己自由的好处。
 
 Kids can see the biggest difference, but even kids do not realize that freedom to learn would turn learning into a pleasure (see: [Pleasure of learning](https://supermemo.guru/wiki/Pleasure_of_learning)). For cultural reasons, few people seem to understand that the end to compulsory schooling would actually increase the quality of education in society.
 
-孩子们可以看到最大的不同，但是即使是孩子们也没有意识到学习的自由会把学习变成一种乐趣(见：学习的乐趣)。由于文化方面的原因，似乎很少有人理解强制教育的结束实际上会提高社会的教育质量。
+孩子们可以看到最大的不同，但是即使是孩子们也没有意识到学习的自由会把学习变成一种乐趣(见：学习的乐趣)。由于文化方面的原因，似乎很少有人理解义务教育的结束实际上会提高社会的教育质量。
 
 ## Student rebellion
 
@@ -124,11 +124,11 @@ Kids can see the biggest difference, but even kids do not realize that freedom t
 
 How can we accomplish the above? There have been dozens of education reforms before. They are all groping in the dark. There have been great ideas like [school choice](https://supermemo.guru/wiki/School_choice), or [school vouchers](https://supermemo.guru/wiki/School_voucher). These are great ideas, but they do not hit the core of the problem: [coercion in learning](https://supermemo.guru/wiki/Coercion_in_learning). Even worse, their implementation is often making things worse. There are meek and shy efforts by lawmakers to abolish compulsory education. Usually they meet with ridicule based on the prevalent cultural perception of schooling. If children could vote, we could quickly populate parliaments with people who understand the key problem of education. However, [voting rights for children](https://supermemo.guru/wiki/Children_should_vote) are as remote as the right to [free learning](https://supermemo.guru/wiki/Free_learning).
 
-我们如何才能实现上述目标？以前已经有过几十次教育改革。他们都在黑暗中摸索。有很多很棒的想法，比如选择学校，或者学券。这些都是很好的想法，但是它们没有触及问题的核心：学习中的强制。更糟糕的是，它们的实施往往使事情变得更糟。立法者们在废除强制教育基金会的问题上表现得温和而腼腆。通常他们会因为对学校教育普遍的文化观念而遭到嘲笑。如果孩子们能够投票，我们可以迅速在议会中植入懂得教育关键问题的人。然而，儿童的投票权与自由学习的权利一样遥远。
+我们如何才能实现上述目标？以前已经有过几十次教育改革。他们都在黑暗中摸索。有很多很棒的想法，比如选择学校，或者学券。这些都是很好的想法，但是它们没有触及问题的核心：学习中的义务。更糟糕的是，它们的实施往往使事情变得更糟。立法者们在废除义务教育基金会的问题上表现得温和而腼腆。通常他们会因为对学校教育普遍的文化观念而遭到嘲笑。如果孩子们能够投票，我们可以迅速在议会中植入懂得教育关键问题的人。然而，儿童的投票权与自由学习的权利一样遥远。
 
 Hereby, I hypothesize that mandatory schooling will only end as a result of a massive peaceful rebellion from school-aged children. Today, this rebellion may seem highly unlikely. The writings of [Gatto](https://supermemo.guru/wiki/Gatto), [Holt](https://supermemo.guru/wiki/Holt) or [Illich](https://supermemo.guru/wiki/Illich) are all decades old, and they did not seem to budge the dial. However, the explosive impact of social media makes me hopeful. All good ideas spread like wildfire. Young minds, are open minds. They feel the pain of [schooling](https://supermemo.guru/wiki/Passive_schooling). Their rebellion may come soon. Once we change constitutions and let children learn their own way, few things will change on the ground except for a big sigh of relief for millions, and many happy young faces around. As of then, the real learning will get a chance to begin.
 
-据此，我假设，强制性学校教育只有在学龄儿童大规模和平反抗的情况下才会结束。今天看来，这种反叛似乎不太可能发生。盖托、霍尔特和伊里奇的著作都已经有几十年的历史了，而且似乎也没有改变什么。然而，社交媒体的爆炸性影响让我充满希望。星星之火，可以燎原。年轻的思想，是开放的思想。他们感受到了上学的痛苦。他们的叛乱可能很快就会到来。一旦我们改变了宪法，让孩子们学会了自己的方式，除了数百万人长舒一口气和周围许多快乐的年轻面孔之外，很少有事情会在地面上发生改变。到那时，真正的学习才有机会开始。
+据此，我假设，义务性学校教育只有在学龄儿童大规模和平反抗的情况下才会结束。今天看来，这种反叛似乎不太可能发生。盖托、霍尔特和伊里奇的著作都已经有几十年的历史了，而且似乎也没有改变什么。然而，社交媒体的爆炸性影响让我充满希望。星星之火，可以燎原。年轻的思想，是开放的思想。他们感受到了上学的痛苦。他们的叛乱可能很快就会到来。一旦我们改变了宪法，让孩子们学会了自己的方式，除了数百万人长舒一口气和周围许多快乐的年轻面孔之外，很少有事情会在地面上发生改变。到那时，真正的学习才有机会开始。
 
 ## Next steps
 
