--- a/Essays/义务教育.md
+++ b/Essays/义务教育.md
@@ -1,30 +1,30 @@
-# Compulsory schooling 强制教育
+# Compulsory schooling 义务教育
 
 ## Definition 定义
 
 **Compulsory schooling** is an educational philosophy in which the right to education has been perverted into a harmful obligation to spend a set number of years in the school system.
 
-**强制教育**是一种教育理念，在这种理念中，受教育权已被扭曲为在学校系统中度过一定年限的有害义务。
+**义务教育**是一种教育理念，在这种理念中，受教育权已被扭曲为在学校系统中度过一定年限的有害义务。
 
 ## Right vs. mandate 权利与命令
 
 **Compulsory schooling** is frequently confused with the right to education. Rights cannot be compulsory. Societies benefit from knowledgeable citizenry, but [coercive learning](https://supermemo.guru/wiki/Coercive_learning) is usually more harmful than beneficial for wisdom. It takes quite an exercise in deprivation to make citizens illiterate in modern information-rich societes. Those who are doomed to remain illiterate may only face unnecessary years of distress.
 
-**强制教育**经常与受教育权混为一谈。权利不能是强制性的。社会受益于有知识的公民，但强迫学习对智慧通常弊大于利。在现代信息丰富的社会里，要让公民成为文盲，需要在剥夺中付出相当大的努力。那些注定仍然是文盲的人可能只会面临不必要的多年痛苦。
+**义务教育**经常与受教育权混为一谈。权利不能是强制性的。社会受益于有知识的公民，但强迫学习对智慧通常弊大于利。在现代信息丰富的社会里，要让公民成为文盲，需要在剥夺中付出相当大的努力。那些注定仍然是文盲的人可能只会面临不必要的多年痛苦。
 
 ## Violation of human rights 侵犯人权
 
 [**Compulsory schooling** is a violation of child's rights and human rights](https://supermemo.guru/wiki/Children's_Freedom:_A_Human_Rights_Perspective). It is a form of slavery that needs to end. It is legislated on the basis of good intentions, and dismal ignorance of how the human brain works.
 
-**强制教育**是对儿童权利和人权的侵犯。这是一种需要结束的奴隶制形式。它是在善意的基础上立法的，而对人脑如何工作的无知令人沮丧。
+**义务教育**是对儿童权利和人权的侵犯。这是一种需要结束的奴隶制形式。它是在善意的基础上立法的，而对人脑如何工作的无知令人沮丧。
 
-## Origins of compulsory schooling 强制教育的起源
+## Origins of compulsory schooling 义务教育的起源
 
 **Compulsory schooling** has multiple roots and can be traced back to Sparta, Plato, Martin Luther, Frederick I, and many more. It was always close to the reasoning that underlies [conscription](https://supermemo.guru/wiki/Conscription) and religious indoctrination. The quest for coercion in education always indicates the sense of intellectual superiority on the part of rulers, or philosophers who would wish to mold the thinking of the "uneducated" populus. The sense of superiority is always boosted by the inability to empathize with an immature brain, or even with the inability to understand a less knowledgeable brain. This is the *curse of knowledge*. All things that seem easy for adults are presumed to be equally easy to children (see: [Efficient learning relies on prior knowledge](https://supermemo.guru/wiki/Learntropy)). Mandatory education or mandatory military training were thus supposed to help the weak to try to match up to their "strong" leadership. Equally often, coercion was simply used to subjugate the masses.
 
-**强制教育**有多个起源，可以追溯到斯巴达、柏拉图、马丁·路德、弗雷德里克一世等等。它总是与征兵制和宗教教化所依据的道理接近。在教育中追求强制，总是表明统治者或哲学家的知识优越感，他们希望塑造 "未受教育 "的民众的思维。这种优越感总是因为无法同情一个不成熟的大脑，甚至无法理解一个知识较少的大脑而得到提升。这就是知识的诅咒。所有对成年人来说看似容易的事情，对儿童来说都被假定为同样容易(参见：有效的学习依赖于前置知识)。因此，强制教育或强制军事训练被认为是为了帮助弱者努力与他们的“强大”领导层相匹配。同样经常的是，胁迫只是用来征服群众的。
+**义务教育**有多个起源，可以追溯到斯巴达、柏拉图、马丁·路德、弗雷德里克一世等等。它总是与征兵制和宗教教化所依据的道理接近。在教育中追求强制，总是表明统治者或哲学家的知识优越感，他们希望塑造 "未受教育 "的民众的思维。这种优越感总是因为无法同情一个不成熟的大脑，甚至无法理解一个知识较少的大脑而得到提升。这就是知识的诅咒。所有对成年人来说看似容易的事情，对儿童来说都被假定为同样容易(参见：有效的学习依赖于前置知识)。因此，义务教育或强制军事训练被认为是为了帮助弱者努力与他们的“强大”领导层相匹配。同样经常的是，胁迫只是用来征服群众的。
 
-## End to compulsory schooling 结束强制教育
+## End to compulsory schooling 结束义务教育
 
 If we end the coercion, education may regain its rightful place in society:
 
@@ -48,7 +48,7 @@ For more see: [Compulsory schooling must end](https://supermemo.guru/wiki/Compul
 - 真正的民主学校可以在世界各地萌芽，而不仅仅是在英国或美国
 - 不太幸运的孩子可以寻找自己的最佳方法来在社会中找到快乐的地方
 
-**强制教育**就像强制吃巧克力：它会让你厌倦世界上最美好的东西
+**义务教育**就像强制吃巧克力：它会让你厌倦世界上最美好的东西
 
 有关更多信息，请参阅：义务教育必须结束
 
@@ -58,6 +58,6 @@ For history of **compulsory schooling** see: [Education: Free and Compulsory](ht
 
 For a word about the pioneers see: [Danny Greenberg](https://supermemo.guru/wiki/Danny_Greenberg), [Peter Gray](https://supermemo.guru/wiki/Peter_Gray), and [Witold Zbijewski](https://supermemo.guru/wiki/Witold_Zbijewski) (in Poland).
 
-有关**强制教育**的历史，请参阅：教育：自由和强制
+有关**义务教育**的历史，请参阅：教育：自由和强制
 
 关于开拓者的话，请参阅：丹尼·格林伯格，彼得·格雷和维托尔德·兹比耶夫斯基（波兰）。
