--- a/Essays/乌托邦的愿景：教育与北朝鲜对比.md
+++ b/Essays/乌托邦的愿景：教育与北朝鲜对比.md
@@ -1,4 +1,5 @@
-# Utopian visions: Education via-a-vis North Korea 乌托邦的愿景：通过北朝鲜的教育
+#! https://zhuanlan.zhihu.com/p/361530732
+# Utopian visions: Education via-a-vis North Korea 乌托邦的愿景：教育与北朝鲜对比
 
 ## North Korean vision
 
@@ -10,7 +11,7 @@ Kim Jong Un's motivations are noble. He wants to build a perfect society of perf
 
 A stereotypical western meme says that North Korean regime is focused on one purpose only: preservation its own existence. In reality, the [Kim dynasty](https://en.wikipedia.org/wiki/Kim_dynasty_(North_Korea)) has always focused on building a perfect society. All the outside appearances of hostility or struggle for self-preservation and privileges of power are only the side effect of the quest for perfection. To western minds, poverty, starvation, concentration camps, executions, and barb wires are a definite signature of the lack of respect for human life. It is inconceivable that those might be weighed up against the good of the future perfect society. We keep forgetting that we execute prisoners too, build border walls, tolerate poverty, and set up Guantanamo. We also do it in the name of better society and justice (defined the western way). Kim Jong Un kills with noble goals in mind too. Only his goals differ. To our best knowledge, his goals are entirely unrealistic. Kim does not live on an isolated island. North Korean borders leak information and humans. Kim cannot isolate the rational mind from basic human instincts and needs. He might try to stratify the flow of societal quality towards Pyongyang and cultural elite. However, the loftier the goals for the top layer, the harder the life for bottom layers of society. This is a classic optimization problem in building perfect social structures. Kim's strategy is based on a myth rooted in poor understanding of the human brain. The same myth drives the entire western education too. The main difference is that most of people believe that Kim is bad, and school is good.
 
-西方的一个刻板印象说，朝鲜政权只关注一个目的：维护自己的生存。实际上，金氏王朝一直专注于建立一个完美的社会。所有外在表象上的敌意或自我保护和权力特权的斗争，都只是追求完美的副作用。在西方人的心目中，贫穷、饥饿、集中营、死刑、铁丝网是不尊重人的生命的明确标志。难以想象，这些可能与未来完美社会的美好相提并论。我们一直忘记，我们也处决囚犯，修建边境墙，容忍贫困，建立关塔那摩。我们也是以更好的社会和正义的名义来做的（用西方的方式来定义）。金正恩杀人也有崇高的目标。只是他的目标不同。据我们所知，他的目标是完全不现实的。金正恩并不是生活在一个孤岛上。朝鲜的边界会泄露信息和人类。金正日无法将理性思维与人类的基本本能和需求隔离开来。他可能会试图将社会素质分层流向平壤和文化精英。然而，上层的目标越高，社会底层的生活就越艰难。这是一个典型的构建完美社会结构的优化问题。金正日的策略是建立在对人脑认识不足的神话基础上的。同样的神话也推动了整个西方教育的发展。主要的区别是，大多数人认为金是坏的，而学校是好的。
+西方的一个刻板印象说，朝鲜政权只关注一个目的：维护自己的生存。实际上，金氏王朝一直专注于建立一个完美的社会。所有外在表象上的敌意或自我保护和权力特权的斗争，都只是追求完美的副作用。在西方人的心目中，贫穷、饥饿、集中营、死刑、铁丝网是不尊重人的生命的明确标志。难以想象，这些可能与未来完美社会的美好相提并论。我们一直忘记，我们也处决囚犯，修建边境墙，容忍贫困，建立关塔那摩。我们也是以更好的社会和正义的名义来做的（用西方的方式来定义）。金正恩杀人也有崇高的目标。只是他的目标不同。据我们所知，他的目标是完全不现实的。金正恩并不是生活在一个孤岛上。朝鲜的边界会泄露信息和人。金正日无法将理性思维与人类的基本本能和需求隔离开来。他可能会试图将社会素质分层流向平壤和文化精英。然而，上层的目标越高，社会底层的生活就越艰难。这是一个典型的构建完美社会结构的优化问题。金正日的策略是建立在对人脑认识不足的迷思基础上的。同样的迷思也推动了整个西方教育的发展。主要的区别是，大多数人认为金是坏的，而学校是好的。
 
 Kim and Education systems will fail in their quest for perfection. The problem is that most people think that Kim is bad, and school is good
 
@@ -22,11 +23,11 @@ Kim and Education systems will fail in their quest for perfection. The problem i
 
 In the quest for perfect knowledge, we suppress the masses, we deprive children of their freedoms, and in the end we build an unhappy society. Kim Jong Un can provide a semblance of a perfect life for his elites. He can showcase great science with his nuclear accomplishments. Similarly, Western education systems can provide a semblance of perfect education for the lucky minority. In the process, freedom and creative potential of the vast majority gets suppressed. The goals are lofty and noble: we try to help all kids get the best knowledge to succeed in life. The mechanics of North Korea and of western education system are the same.
 
-在追求完美知识的过程中，我们压制了大众，我们剥夺了儿童的自由，最终我们建立了一个不幸福的社会。金正恩可以为他的精英们提供半点完美的生活。他可以用他的核成就展示伟大的科学。同样，西方的教育体系也可以为少数幸运儿提供半点完美的教育。在这个过程中，绝大多数人的自由和创造潜力都会被压制。我们的目标是崇高而高尚的：我们努力帮助所有的孩子获得最好的知识，以获得人生的成功。朝鲜和西方教育体系的机制是一样的。
+在追求完美知识的过程中，我们压制了大众，我们剥夺了儿童的自由，最终我们建立了一个不幸福的社会。金正恩可以为他的精英们提供一点完美的生活。他可以用他的核成就展示伟大的科学。同样，西方的教育体系也可以为少数幸运儿提供一点完美的教育。在这个过程中，绝大多数人的自由和创造潜力都会被压制。我们的目标是崇高而高尚的：我们努力帮助所有的孩子获得最好的知识，以获得人生的成功。朝鲜和西方教育体系的机制是一样的。
 
 Many educators can see the optimization problem of schooling. Most of them can see some portions of the problem. Sadly, very few can see the big picture of the **big error of education**. Too few people can truly grasp the problem of the [global optimization of education](https://supermemo.guru/wiki/Optimization_of_education).
 
-许多教育工作者都能看到学校教育的优化问题。他们中的大多数人都能看到问题的某些部分。遗憾的是，很少有人能看到教育的大错误的全貌。能真正把握全局优化教育问题的人太少了。
+许多教育工作者都能看到学校教育的优化问题。他们中的大多数人都能看到问题的某些部分。遗憾的是，很少有人能看到**教育的大错误**的全貌。能真正把握全局优化教育问题的人太少了。
 
 ## Perfect society problem
 
@@ -34,11 +35,11 @@ Many educators can see the optimization problem of schooling. Most of them can s
 
 The myth of a perfect society (and perfect education) begins with the thought that if everyone did what I do, the life would be perfect
 
-完美的社会（和完美的教育）的神话始于这样的想法：如果每个人都像我这样做，生活就完美了。
+完美的社会（和完美的教育）的迷思始于这样的想法：如果每个人都像我这样做，生活就完美了。
 
 It is no coincidence that I focused my rants on Germany and Sweden (see: [European outcasts](https://supermemo.guru/wiki/European_outcasts)). Both belong to our federation of European states. Both are part of my family. Both have been characterized by their quest for perfection, incl. perfection in social justice. Both have been pretty bold and radical in social experimentation. Both have been very successful in accomplishing multiple goals of a perfect society. Regrettably, both have also banned [homeschooling](https://supermemo.guru/wiki/Homeschooling), which is the greatest conceivable violation of educational freedoms on European soil.
 
-我把我的抱怨集中在德国和瑞典身上并不是偶然的（见：欧洲弃儿）。这两个国家都属于我们的欧盟。两者都是我家庭的一部分。两者的特点都是追求完美，包括社会正义的完美。两人在社会实验方面都相当大胆和激进。两者都非常成功地完成了完美社会的多个目标。遗憾的是，两者也都禁止了家庭教育，这是欧洲土地上对教育自由的最大的可以想象的侵犯。
+我把我的抱怨集中在德国和瑞典身上并不是偶然的（见：欧洲流氓）。这两个国家都属于我们的欧盟。两者都是我家庭的一部分。两者的特点都是追求完美，包括社会正义的完美。两人在社会实验方面都相当大胆和激进。两者都非常成功地完成了完美社会的多个目标。遗憾的是，两者也都禁止了家庭教育，这是欧洲土地上对教育自由的最大的可以想象的侵犯。
 
 ## Explaining the problem of schooling
 
