--- a/Essays/现代学校教育就像苏联经济.md
+++ b/Essays/现代学校教育就像苏联经济.md
@@ -6,7 +6,7 @@
 
 Most people in the industrialized world realize that market economy has many advantages that cannot be replaced with an economy based on micromanaged central control. At the same time, the same people believe in the education based on centrally planned [curriculum](https://supermemo.guru/wiki/Curriculum). If we realize that both (1) economies and (2) school systems are subject to similar issues of mathematical optimization, we can resolve this cultural paradox of perception.
 
-工业化世界的大多数人都认识到，市场经济有许多优点，是以微观中央控制为基础的经济所不能取代的。同时，这些人也相信基于中央计划课程的教育。如果我们认识到（1）经济和（2）学校制度都面临着类似的数学优化问题，我们就可以解决这种文化上的认识悖论。
+工业化世界的大多数人都认识到，市场经济有许多优点，是以微观管理的中央控制为基础的经济所不能取代的。同时，这些人也相信基于中央计划课程的教育。如果我们认识到（1）经济和（2）学校制度都面临着类似的数学优化问题，我们就可以解决这种文化上的认识悖论。
 
 [Compulsory schooling](https://supermemo.guru/wiki/Compulsory_schooling) is very inefficient at educating people. The inefficiency is analogous to problems with command economy
 
@@ -30,7 +30,7 @@ Communism enslaved my mind by schooling and information monopoly. It was a gradu
 
 I became realistic about school thanks to [incremental reading](https://supermemo.guru/wiki/Incremental_reading), which serves as a great metaphor for efficient [free learning](https://supermemo.guru/wiki/Free_learning). However, I was always a happily indoctrinated student. This is why I still needed some help from children unhappy with school. Their faces told me the rest of the story. In college, I transformed my school, and tailored it to my needs. In the years 1987-1990, school truly served me well because I took it out of the equation (see: [How I invented perfect schooling](https://supermemo.guru/wiki/How_I_invented_perfect_schooling)). This made me insensitive to the myth of *good school*, and kept me blind for many years. Like an incrementally boiled frog, I did not ever sense the badness of school.
 
-我对学校变得现实了，这要归功于渐进式阅读，它是高效自由学习的一个很好的比喻。然而，我始终是一个快乐的被灌输的学生。这就是为什么我还是需要一些对学校不满意的孩子的帮助。他们的脸告诉了我剩下的故事。在大学里，我对学校进行了改造，并根据自己的需要对学校进行了改造。在1987-1990年，学校真正为我服务，因为我把它从等式中抽离出来（见：我如何发明完美的学校教育）。这让我对好学校的神话不敏感，让我盲目了很多年。就像一只渐渐被煮熟的青蛙，我从来没有感受到学校的坏处。
+我对学校变得现实了，这要归功于渐进阅读，它是高效自由学习的一个很好的比喻。然而，我始终是一个快乐的被灌输的学生。这就是为什么我还是需要一些对学校不满意的孩子的帮助。他们的脸告诉了我剩下的故事。在大学里，我对学校进行了改造，并根据自己的需要对学校进行了改造。在 1987-1990 年，学校真正为我服务，因为我把它从等式中抽离出来（见：我如何发明完美的学校教育）。这让我对好学校的神话不敏感，让我盲目了很多年。就像一只渐渐被煮熟的青蛙，我从来没有感受到学校的坏处。
 
 It is possible to enslave people incrementally and meet no opposition
 
@@ -42,15 +42,15 @@ It is possible to enslave people incrementally and meet no opposition
 
 I tried to quantify the degree of abysmal failure of schooling in expanding my knowledge. Schools were [16-50 times slower](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#Growth_of_my_knowledge_of_history) in expanding my own knowledge of history than was my own life free of schooling. In my investigations, I chose the subject of history because history is not part of my job. It is just interesting. Even if you take a correction for the fact that I compare the more mature half of my life with the less mature half, the numbers are still staggering.
 
-我试图量化学校教育在拓展知识方面的糟糕失败程度。学校在拓展自己的历史知识方面，比我自己没有学校教育的生活要慢16-50倍。在我的调查中，我选择了历史学科，因为历史不是我工作的一部分。它只是有趣。即使你把我比较成熟的半生和不太成熟的半生做一个修正，这个数字也是惊人的。
+我试图量化学校教育在拓展知识方面的糟糕失败程度。学校在拓展自己的历史知识方面，比我自己没有学校教育的生活要慢 16-50 倍。在我的调查中，我选择了历史学科，因为历史不是我工作的一部分。它只是有趣。即使你把我比较成熟的半生和不太成熟的半生做一个修正，这个数字也是惊人的。
 
 When I say kids should decide their own learning direction, I keep hearing of those stray kids that may play video games all day, spend their days on collecting baseball cards, or study UFOs and aliens. [Sudbury Valley School](https://supermemo.guru/wiki/Sudbury_Valley_School) proves that prediction to be wrong.
 
-当我说孩子们应该决定自己的学习方向时，我一直听到那些流浪的孩子，他们可能会整天玩电子游戏，把时间花在收集棒球卡上，或者研究UFO和外星人。萨德伯里谷学校证明这种预测是错误的。
+当我说孩子们应该决定自己的学习方向时，我一直听到那些流浪的孩子，他们可能会整天玩电子游戏，把时间花在收集棒球卡上，或者研究 UFO 和外星人。萨德伯里谷学校证明这种预测是错误的。
 
 Some proponents of schooling say: the kid [needs to know the multiplication table](https://supermemo.guru/wiki/Toxic_memory) or where the north is. Otherwise he won't be able to find her place in modern economy. I agree that basic knowledge is vital. However, kids master basic knowledge with or without schooling. By the age of 12-13, most kids know where the north is. I learned that before school from my brother. I could find north using the sun and a watch, before I could read the watch itself. The questions is: *Do all kids need to know who Julian Kawalec is?* If you don't know Kawalec, see [how I nearly failed to graduate because of not knowing details from Kawalec book](https://supermemo.guru/wiki/Why_I_do_not_read_books). Do all kids need to know all affluents of Amazon? I love geography, but I struggle to admit I have problems with recalling even one affluent despite the fact that I find all things related to Amazon rainforest highly interesting.
 
-一些学校教育的支持者说：孩子需要知道乘法表或者北方在哪里。否则他将无法在现代经济中找到她的位置。我同意基础知识是至关重要的。但是，不管有没有上学，孩子们都会掌握基本知识。在12-13岁的时候，大多数孩子都知道北方在哪里。我上学前就从我哥哥那里学到了。我可以用太阳和手表找到北方，在我能读懂手表本身之前。问题是。所有的孩子都需要知道Julian Kawalec是谁吗? 如果你不知道Kawalec，看看我是如何因为不知道Kawalec书中的细节而差点没毕业的。所有的孩子都需要知道亚马逊的所有富豪吗？我喜欢地理，但我努力承认，尽管我觉得所有与亚马逊雨林有关的东西都非常有趣，但我却连回忆一个富裕的地方都有问题。
+一些学校教育的支持者说：孩子需要知道乘法表或者北方在哪里。否则他将无法在现代经济中找到她的位置。我同意基础知识是至关重要的。但是，不管有没有上学，孩子们都会掌握基本知识。在12-13岁的时候，大多数孩子都知道北方在哪里。我上学前就从我哥哥那里学到了。我可以用太阳和手表找到北方，在我能读懂手表本身之前。问题是。所有的孩子都需要知道 Julian Kawalec 是谁吗? 如果你不知道 Kawalec，看看我是如何因为不知道 Kawalec 书中的细节而差点没毕业的。所有的孩子都需要知道亚马逊的所有富豪吗？我喜欢地理，但我努力承认，尽管我觉得所有与亚马逊雨林有关的东西都非常有趣，但我却连回忆一个富裕的地方都有问题。
 
 All those reservations and doubts about self-directed learning come from those who got accustomed to being led by national curricula, teachers, and set rules for learning. The doubts come from those who do not believe in the power of human self-determination and those who do not believe in their own powers.
 
@@ -58,11 +58,11 @@ All those reservations and doubts about self-directed learning come from those w
 
 This reminds me of the old communist argument that the state knows best what citizens need, while a rogue enterpreneur might abuse its workers, produce harmful products, or just focus solely on enriching himself rather than working for the good of society. I grew up in the communist system. I was indoctrinated by the rigid communist curriculum. It took me quite a while to understand why central control over economy isn't as effective as free market optimization. However, at the age of 14, I already had no doubt that self-directed learning is vastly superior to learning imposed by a teacher.
 
-这让我想起了共产主义的老论调，国家最知道公民需要什么，而一个无赖的企业家可能会虐待工人，生产有害的产品，或者只顾着中饱私囊，而不是为社会谋福利。我是在共产主义制度下长大的。我被僵化的共产主义课程所灌输。我花了相当长的时间才明白为什么中央控制经济不如自由市场优化有效。然而，在14岁的时候，我已经毫不怀疑，自主学习比老师强加的学习要优越很多。
+这让我想起了共产主义的老论调，国家最知道公民需要什么，而一个无赖的企业家可能会虐待工人，生产有害的产品，或者只顾着中饱私囊，而不是为社会谋福利。我是在共产主义制度下长大的。我被僵化的共产主义课程所灌输。我花了相当长的时间才明白为什么中央控制经济不如自由市场优化有效。然而，在 14 岁的时候，我已经毫不怀疑，自主学习比老师强加的学习要优越很多。
 
 This gave me a hint to formulate the **Soviet 5-year-plan metaphor** of modern schooling. Metaphors in my texts are no proof. They are just a different way of illustrating my reasoning:
 
-这给了我一个暗示，让我制定了现代学校教育的苏联5年计划比喻。我文中的比喻不是证明。它们只是我说明理由的另一种方式：
+这给了我一个暗示，让我制定了现代学校教育的**苏联 5 年计划比喻**。我文中的比喻不是证明。它们只是我说明理由的另一种方式：
 
 # Schooling is like Soviet Economy
 
@@ -90,7 +90,7 @@ All great economic and educational plans start with priming the populus with som
 
 The 5-year-plan begins with a God-like figure in the like of Stalin. Schooling plans begin with a God-like minister of education who can move schools and millions of people in directions of her choice with a stroke of a pen. The God-like figure got its army of executioners: party bosses, and teachers. Primed by propaganda, dazzled workers and first grade students get down to the plan with great enthusiasm.
 
-5年计划从一个像斯大林一样的神一样的人物开始。学校教育计划始于一个神一样的教育部长，她可以用一支笔把学校和千百万人往她选择的方向移动。这个神一样的人物有了它的刽子手大军：党的老大，和教师。在宣传的引导下，眼花缭乱的工人和一年级的学生们以极大的热情投入到计划中去。
+5 年计划从一个像斯大林一样的神一样的人物开始。学校教育计划始于一个神一样的教育部长，她可以用一支笔把学校和千百万人往她选择的方向移动。这个神一样的人物有了它的刽子手大军：党魁，和教师。在宣传的引导下，眼花缭乱的工人和一年级的学生们以极大的热情投入到计划中去。
 
 Then the actual work and suffering begin. The torment and injustice affects those who take the greatest burden in executing the plan or those who stand in the way. The suffering extends to workers, peasants, school directors, teachers, and students.
 
@@ -118,7 +118,7 @@ Contrast it with the thriving free market spirit of Silicon Valley, or happy fac
 
 **Perfect competition vs. perfect learning machines**
 
-**完美竞争VS完美学习机**
+**完美竞争 VS 完美学习机器**
 
 Someone can question my Soviet economy metaphor saying that kids have immature brains while an entrepreneur is guided by a rational mature mind.
 
@@ -134,7 +134,7 @@ Kids will learn to walk even if we disrupt their efforts with various accelerati
 
 Businesses and kids often chose their paths using semi-rational criteria. They will follow their natural preferences and interests. A capitalist may want to turn his hobby into a job. A child may prefer reading Pinocchio over studying math. Every great CEO, inventor or a billionaire will tell you that you need to love what you do. Otherwise the results will be as bad as the productivity in the Soviet economy known for its worker's adage: "*if you toil or if you sleep, 50 rubles you will reap*".
 
-企业和孩子们经常会用半理性的标准来选择自己的道路。他们会遵循自己的自然喜好和兴趣。一个资本家可能想把自己的爱好变成工作。一个孩子可能更喜欢阅读《匹诺曹》而不是学习数学。每一个伟大的CEO、发明家或亿万富翁都会告诉你，你需要热爱你的工作。否则，结果会像苏联经济的生产力一样糟糕，因为它的工人格言："如果你劳作或睡觉，你将收获50卢布"。
+企业和孩子们经常会用半理性的标准来选择自己的道路。他们会遵循自己的自然喜好和兴趣。一个资本家可能想把自己的爱好变成工作。一个孩子可能更喜欢阅读《匹诺曹》而不是学习数学。每一个伟大的 CEO、发明家或亿万富翁都会告诉你，你需要热爱你的工作。否则，结果会像苏联经济的生产力一样糟糕，因为它的工人格言："如果你劳作或睡觉，你将收获 50 卢布"。
 
 # Robinson's fast food metaphor
 
@@ -164,7 +164,7 @@ Robinson says:
 
 [Compulsory schooling must end](https://supermemo.guru/wiki/Compulsory_schooling_must_end). This should be obvious with a bit of understanding of the theory of learning. However, the entire western world seems to be trying to optimize a wrong design. In [Finnish paradox](https://supermemo.guru/wiki/Finnish_paradox), I show how Finnish schools lead the world in being open to new ideas. However, they also may keep optimizing the dead end of school that is not fully committed to [free learning](https://supermemo.guru/wiki/Free_learning). In that sense, Finland is a bit like Soviet Union 1957. Everyone was in awe with Sputnik. Many people had doubts about the superiority of free markets over the command economy. However, the proletariat of the communist empire did not fully subscribe to the ideology. Many people in the East could see the richest of the West and wondered why they cannot freely vote for parties that might perhaps change a thing or two. Many students can perfectly see the harm of coercion, but they have no vote. Parents, teachers and politicians are too busy with their lives and do not fully appreciate the pain of schooling. They live with the myth that "school is good". Finnish students are obedient and compliant. This is reminiscent to the well-indoctrinated population (I was one of those compliant souls: [I stopped being a patriot](https://supermemo.guru/wiki/I_stopped_being_a_patriot)). As much as we needed Lech Walesa and other rebels, we need now young rebels who would help change the school system. It will be hard to find such rebels in Finland. Finnish system is too good. I bet on Eastern Europe (perhaps Poland?). Our students are smart, rebellious, unhappy, and the system is almost as bad as the Soviet Union in the days leading to its collapse.
 
-义务教育必须结束。只要对学习理论稍有了解，这应该是显而易见的。然而，整个西方世界似乎都在试图优化一个错误的设计。在《芬兰悖论》中，我展示了芬兰学校如何引领世界对新思想的开放。然而，他们也可能不断优化没有完全致力于自由学习的学校死角。在这个意义上，芬兰有点像1957年的苏联。每个人都对斯普特尼克心存敬畏。很多人对自由市场比命令经济的优越性产生了怀疑。然而，共产主义帝国的无产阶级并不完全认同这种意识形态。许多东方人可以看到西方最富有的人，他们想知道为什么他们不能自由地投票给那些或许可以改变一两件事情的政党。很多学生完全可以看到强制的危害，但他们没有投票权。家长、老师和政治家们忙于生活，并没有完全体会到学校教育的痛苦。他们生活在 "学校好 "的神话中。芬兰的学生很听话，很顺从。这让人联想到那些受到良好教育的民众（我就是那些顺从的灵魂之一：我不再是一个爱国者）。就像我们需要莱赫-瓦文萨和其他反叛者一样，我们现在也需要年轻的反叛者，他们会帮助改变学校制度。在芬兰很难找到这样的叛逆者。芬兰的制度太好。我把赌注押在东欧（也许是波兰？我们的学生聪明、叛逆、不快乐，而且这个制度几乎和苏联崩溃前的日子一样糟糕。
+义务教育必须结束。只要对学习理论稍有了解，这应该是显而易见的。然而，整个西方世界似乎都在试图优化一个错误的设计。在《芬兰悖论》中，我展示了芬兰学校如何引领世界对新思想的开放。然而，他们也可能不断优化没有完全致力于自由学习的学校死角。在这个意义上，芬兰有点像 1957 年的苏联。每个人都对斯普特尼克心存敬畏。很多人对自由市场比命令经济的优越性产生了怀疑。然而，共产主义帝国的无产阶级并不完全认同这种意识形态。许多东方人可以看到西方最富有的人，他们想知道为什么他们不能自由地投票给那些或许可以改变一两件事情的政党。很多学生完全可以看到强制的危害，但他们没有投票权。家长、老师和政治家们忙于生活，并没有完全体会到学校教育的痛苦。他们生活在 "学校好"的神话中。芬兰的学生很听话，很顺从。这让人联想到那些受到良好教育的民众（我就是那些顺从的灵魂之一：我不再是一个爱国者）。就像我们需要莱赫-瓦文萨和其他反叛者一样，我们现在也需要年轻的反叛者，他们会帮助改变学校制度。在芬兰很难找到这样的叛逆者。芬兰的制度太好。我把赌注押在东欧（也许是波兰？我们的学生聪明、叛逆、不快乐，而且这个制度几乎和苏联崩溃前的日子一样糟糕。
 
 Compulsory schooling may need a bloodless rebellion for its complete eradication
 
@@ -180,7 +180,7 @@ I often hear the opinion: *"double teacher salary, you will quadruple the effici
 
 Imagine what would happen, if governments decided to make [SuperMemo](https://supermemo.guru/wiki/SuperMemo) compulsory at schools! 1-2% of kids might catch that hook. The rest of the students would turn into lifelong [SuperMemo haters](https://supermemo.guru/wiki/Hating_SuperMemo). Done wrongly, SuperMemo could do more damage than good. [Badly formulated](https://supermemo.guru/wiki/20_rules) unwanted knowledge is comparable to [information garbage](https://supermemo.guru/wiki/Toxic_memory). With bad knowledge, SuperMemo would be turned into a perfect schooling torture machine. Perfect tool for efficient time-wasting and suppression of the [learn drive](https://supermemo.guru/wiki/Learn_drive). It would result in [cramming](https://supermemo.guru/wiki/Cramming) and reviewing garbage!
 
-想象一下，如果政府决定在学校强制推行 SuperMemo，会发生什么？1-2%的孩子可能会上钩。其余的学生会变成终生讨厌 SuperMemo 的人。如果做得不对，SuperMemo 可能弊大于利。制订不好的不需要的知识，堪比信息垃圾。糟糕的知识，SuperMemo 会变成一台完美的学校教育拷问机器。完美的工具，高效的时间浪费和学习动力的压制。会导致补习和复习的垃圾!
+想象一下，如果政府决定在学校强制推行 SuperMemo，会发生什么？1-2% 的孩子可能会上钩。其余的学生会变成终生讨厌 SuperMemo 的人。如果做得不对，SuperMemo 可能弊大于利。制订不好的不需要的知识，堪比信息垃圾。糟糕的知识，SuperMemo 会变成一台完美的学校教育拷问机器。完美的工具，高效的时间浪费和学习动力的压制。会导致补习和复习的垃圾!
 
 In the [optimum education system](https://supermemo.guru/wiki/Reform), all learning must [come from the heart](https://supermemo.guru/wiki/Fundamental_law_of_learning). Good learning must be governed by the [pleasures](https://supermemo.guru/wiki/Pleasure_of_learning) generated by the [learn drive](https://supermemo.guru/wiki/Learn_drive).
 
