修正并合并翻译

--- a/Essays/艾宾浩斯遗忘曲线的错误.md
+++ b/Essays/艾宾浩斯遗忘曲线的错误.md
@@ -58,7 +58,7 @@ This function is not universally applicable as it refers to a specific person, a
 
 Today, we know that forgetting is exponential in nature (see: [forgetting curve](https://supermemo.guru/wiki/Forgetting_curve)). It is very similar to radioactive decay. It is governed by similar principles. To see the exponential nature of forgetting, we need to select the learning material for the same level of [complexity](https://supermemo.guru/wiki/Complexity) (as it is done in [SuperMemo](https://supermemo.guru/wiki/SuperMemo)). Heterogeneous material will inevitably lead to a superposition of different forgetting curves with different decay constants.
 
-今天，我们知道遗忘本质上的确是指数性的(参见：遗忘曲线)，与放射性衰变非常相似，也遵循类似的原则。要展现遗忘的指数性本质，我们需要选择复杂程度相同的学习材料(就像在SuperMemo中所做的那样)。复杂程度不同材料则会导致不同常数的遗忘曲线叠加
+今天，我们知道遗忘本质上的确是指数性的(参见：遗忘曲线)，与放射性衰变非常相似，也遵循类似的原则。要展现遗忘的指数性本质，我们需要选择复杂程度相同的学习材料(就像在SuperMemo中所做的那样)。复杂程度不同材料则会导致不同常数的遗忘曲线叠加。
 
 There are many misconceptions that have roots in the misinterpretation of the research undertaken by Ebbinghaus.
 
@@ -86,7 +86,7 @@ The emphasis on knowledge coherence might be the most important of the above obs
 
 For more on knowledge coherence see: [20 rules](https://supermemo.guru/wiki/20_rules).
 
-有关贯性的更多信息，请参阅：20条规则。
+有关知识连贯性的更多信息，请参阅：20条规则。
 
 **With [well formulated](https://supermemo.guru/wiki/20_rules) knowledge and with [smart review](https://supermemo.guru/wiki/SuperMemo) we can break free from the depressing power of forgetting that was hinted by Ebbinghaus's research**
 
