--- a/Essays/艾宾浩斯遗忘曲线的错误.md
+++ b/Essays/艾宾浩斯遗忘曲线的错误.md
@@ -4,7 +4,7 @@
 
 [Hermann Ebbinghaus](https://supermemo.guru/wiki/Hermann_Ebbinghaus) was a pioneer of memory research. He was also a pioneer of systematic self-investigations in the field. His [forgetting curve](https://supermemo.guru/wiki/Forgetting_curve) has informed the science of memory for over a century. However, today, we need to correct our thinking about the forgetting curve and its impact on learning. What Ebbinghaus demonstrated may sound depressing, but the power of human brain goes well beyond those rudimentary findings.
 
-赫尔曼·艾宾浩斯是记忆研究的先驱，也是该领域系统自我调查的首创者。一个多世纪以来，他的遗忘曲线对记忆科学有深远影响。然而在今天，我们需要纠正我们对遗忘曲线及其对学习的影响的看法。艾宾浩斯遗忘曲线可能令人沮丧，但随着之后研究深入，人类大脑的能力远远超过其。
+赫尔曼·艾宾浩斯是记忆研究的先驱，也是该领域系统自我调查的首创者。一个多世纪以来，他的遗忘曲线对记忆科学有深远影响。然而在今天，我们需要纠正我们对遗忘曲线及其对学习的影响的看法。艾宾浩斯遗忘曲线可能令人沮丧，但随着之后研究深入，人类大脑的能力远远超过这些初步发现。
 
 **Ebbinghaus methodology in investigating memory may provide a false impression that human memory is wildly more volatile than it actually is**
 
